# Multi-Robot-Autonomous-Navigation

./: README.md  exec.sh  run.sh
docker_ws/: Dockerfile.project  build.sh
ros_ws/: frames_2025-09-25_15.18.51.gv
ros_ws/install/multi_robot_bringup/share/multi_robot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/multi_robot_bringup/share/multi_robot_bringup/config/: robots.yaml
ros_ws/install/multi_robot_bringup/share/multi_robot_bringup/launch/: tb3_nav2.launch.py  tb3_world.launch.py
ros_ws/install/multi_robot_bringup/share/multi_robot_bringup/map/: map2.pgm  map2.yaml
ros_ws/install/multi_robot_bringup/share/multi_robot_bringup/params/: burger_nav2_params.yaml
ros_ws/log/: latest_build
ros_ws/src/dynamic_obstacle_detector/: setup.py
ros_ws/src/dynamic_obstacle_detector/dynamic_obstacle_detector/: obstacle_detector_node.py
ros_ws/src/dynamic_obstacle_detector_interfaces/: CMakeLists.txt
ros_ws/src/dynamic_obstacle_detector_interfaces/msg/: TrackedObjectArray.msg
ros_ws/src/multi_robot_bringup/: package.xml  setup.py
ros_ws/src/multi_robot_bringup/config/: robots.yaml
ros_ws/src/multi_robot_bringup/launch/: tb3_nav2.launch.py  tb3_world.launch.py
ros_ws/src/multi_robot_bringup/params/: burger_nav2_params.yaml
ros_ws/src/multi_robot_bringup/rviz/: tb3_navigation2.rviz
ros_ws/src/turtlebot3_gazebo/params/: turtlebot3_burger_bridge.yaml
ros_ws/src/turtlebot3_gazebo/worlds/: turtlebot3_dqn_stage1.world
(+37 files in other folders)
